# solana-native-program-template

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yml
e2e/: .gitignore  down.ts  hello.test.ts  jest.config.js  package-lock.json  package.json  setup.ts  utils.ts
e2e/tests/: counter.test.ts  hello.test.ts
src/: lib.rs
src/accounts/: mod.rs
src/utils/: mod.rs
